# MeshMetrics

./: CMakeLists.txt  eval_metrics.py  get_metrics.py  get_metrics_per_triangle.py
cmake/: pybind11.cmake
src/app/: CMakeLists.txt  main.cpp
src/lib/meme/: CMakeLists.txt  meme.cpp  meme.hpp
src/pymeme/: CMakeLists.txt  pymeme.cpp
